--- a/app/src/main/res/layout/information_chauffeur.xml
+++ b/app/src/main/res/layout/information_chauffeur.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,97 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-
-    <EditText
-        android:id="@+id/points"
+    <TextView
+        android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/teal_200"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp"
-        tools:layout_editor_absolutex="30dp"
-        tools:layout_editor_absolutey="32dp" />
+        android:text="Déconnexion"
+        tools:layout_editor_absoluteX="314dp"
+        tools:layout_editor_absoluteY="16dp" />
 
-    <ImageView
-        android:id="@+id/reserve"
-        android:layout_width="366dp"
-        android:layout_height="163dp"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="57dp" />
-
-    <EditText
-        android:id="@+id/textView"
+    <TextView
+        android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter your vehicule"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="283dp" />
+        android:text="Mon compte"
+        tools:layout_editor_absoluteX="221dp"
+        tools:layout_editor_absoluteY="16dp" />
 
-    <EditText
-        android:id="@+id/textView2"
-        android:layout_width="249dp"
-        android:layout_height="46dp"
-        android:hint="information"
-        android:text=""
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="317dp" />
-
-    <EditText
-        android:id="@+id/textView4"
-        android:layout_width="176dp"
-        android:layout_height="38dp"
-        android:hint="Nom du chauffeur"
-        android:text=""
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="370dp" />
-
-    <EditText
-        android:id="@+id/textView5"
-        android:layout_width="286dp"
-        android:layout_height="49dp"
-        android:hint="Type de vehicule"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="409dp" />
-
-    <EditText
-        android:id="@+id/textView6"
-        android:layout_width="124dp"
-        android:layout_height="23dp"
-        android:text="Model"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="470dp" />
-
-    <EditText
-        android:id="@+id/textView7"
-        android:layout_width="183dp"
-        android:layout_height="42dp"
-        android:hint="Couleur"
-        android:text=""
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="501dp" />
-
-    <EditText
-        android:id="@+id/textView8"
-        android:layout_width="323dp"
-        android:layout_height="46dp"
-        android:hint="Numero Immatriculation"
-        android:text=""
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="560dp" />
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        tools:layout_editor_absoluteX="20dp"
+        tools:layout_editor_absoluteY="20dp" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="384dp"
-        android:layout_height="47dp"
-        android:text="SELECT A PHOTO"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="627dp" />
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gérer les demandes de réservations"
+        tools:layout_editor_absoluteX="45dp"
+        tools:layout_editor_absoluteY="295dp" />
 
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Voir mes courses"
+        tools:layout_editor_absoluteX="118dp"
+        tools:layout_editor_absoluteY="376dp" />
 
 </android.support.constraint.ConstraintLayout>
