--- a/app/src/main/res/layout/page_chauffeur.xml
+++ b/app/src/main/res/layout/page_chauffeur.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView12"
@@ -46,5 +43,4 @@
         android:text="Voir mes courses"
         tools:layout_editor_absoluteX="118dp"
         tools:layout_editor_absoluteY="376dp" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
