--- a/app/src/main/res/layout/activity_creation_compte_chauffeur.xml
+++ b/app/src/main/res/layout/activity_creation_compte_chauffeur.xml
@@ -1,9 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreationCompteChauffeur">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/titrePageCreerTonCompte"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/creerSonCompteTitre"
+        android:textSize="32dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"/>
+
+    <EditText
+        android:id="@+id/entrezNom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="80dp"
+        android:layout_below="@+id/titrePageCreerTonCompte"
+        android:hint="@string/entrezNom"/>
+
+    <EditText
+        android:id="@+id/entrezPrenom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/entrezNom"
+        android:hint="@string/entrezPrenom"/>
+
+    <EditText
+        android:id="@+id/entrezMail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/entrezPrenom"
+        android:hint="@string/entrezMail"/>
+
+    <EditText
+        android:id="@+id/entrezTelephone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/entrezMail"
+        android:hint="@string/entrezTel"
+        android:inputType="phone"/>
+
+    <EditText
+        android:id="@+id/entrezType du vehicule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/entrezTelephone"
+        android:hint="@string/type de vehicule"
+        android:inputType="phone"/>
+
+    <EditText
+        android:id="@+id/entrez couleur du vehicule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/entreztype de vehicule"
+        android:hint="@string/couleur du vehicule"
+        android:inputType="phone"/>
+
+    <EditText
+        android:id="@+id/entrezvotre immatriculation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/entrezcouleur du vehicule"
+        android:hint="@string/votre immatriculation"
+        android:inputType="phone"/>
+
+    <EditText
+        android:id="@+id/entrez votre position GPS"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/entrezImmatriculation"
+        android:hint="@string/votre position GPS"
+        android:inputType="phone"/>
+
+
+    <Button
+        android:id="@+id/continuerCreationCompte"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Valider"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"/>
+
+
+
+
+</RelativeLayout>
