--- a/app/src/main/res/layout/page_client.xml
+++ b/app/src/main/res/layout/page_client.xml
@@ -4,13 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/nomClient"
+        android:text=""/>
+
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Consulter mes réservations"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="403dp" />
+        tools:layout_editor_absoluteX="87dp"
+        tools:layout_editor_absoluteY="401dp" />
 
     <Button
         android:id="@+id/button2"
