- Enregistrement d'un client en base de données; - Création parcours client jusqu'à réservation et consultation des réservation -> Erreur quand click sur boutons; - Méthode Callback pour afficher des données depuis la base de données; - Création des pages java et xml Mon Compte - Paramètres : à remplir - Création des pages java et xml Mon Compte - Ma liste de réservation : à remplir - Amélioration de la page de connexion : ajout d'un bouton Sign up et d'un text view "Créer mon compte"; - Refacto du code par la création de méthodes dédiées pour les button click et l'enregistrement en base de données d'un client lors d'une création de compte.

--- a/app/src/main/res/layout/page_connexion.xml
+++ b/app/src/main/res/layout/page_connexion.xml
@@ -10,7 +10,7 @@
         android:textSize="20dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/btn"/>
+        android:id="@+id/btnLogin"/>
 
     <EditText
         android:layout_width="250dp"
@@ -19,7 +19,7 @@
         android:id="@+id/password"
         android:inputType="textPassword"
         android:layout_centerHorizontal="true"
-        android:layout_above="@id/btn"
+        android:layout_above="@id/btnLogin"
         android:layout_marginBottom="30dp"
         />
 
@@ -40,7 +40,27 @@
         android:id="@+id/forgotpassword"
         android:textStyle="italic"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn"
+        android:layout_below="@id/btnLogin"
         android:layout_marginTop="30dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:text="Créer mon compte"
+        android:id="@+id/créerUnCompte"
+        android:textStyle="italic"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/forgotpassword"
+        android:layout_marginTop="50dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Up"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/créerUnCompte"
+        android:id="@+id/btnSignUp"/>
 
 </RelativeLayout>
