--- a/app/src/main/res/layout/page_client.xml
+++ b/app/src/main/res/layout/page_client.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,45 +8,63 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nomClient"
-        android:text=""/>
+        android:text=""
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnConsulterReservationCompteClient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:text="Consulter mes réservations"
+        android:layout_marginBottom="300dp"
         tools:layout_editor_absoluteX="87dp"
         tools:layout_editor_absoluteY="401dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnReserverCompteClient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Réserver"
         tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="330dp" />
+        tools:layout_editor_absoluteY="330dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/btnConsulterReservationCompteClient"
+        android:layout_marginBottom="30dp"/>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/seDeconnecterCompteClient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Se Déconnecter"
         tools:layout_editor_absoluteX="296dp"
-        tools:layout_editor_absoluteY="20dp" />
+        tools:layout_editor_absoluteY="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/dateCompteClient"
         android:layout_width="133dp"
         android:layout_height="26dp"
         android:text="15/02/2023 - Jeudi"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="20dp" />
+        tools:layout_editor_absoluteY="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"/>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/btnMonCompteClient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mon compte"
         tools:layout_editor_absoluteX="203dp"
-        tools:layout_editor_absoluteY="20dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        tools:layout_editor_absoluteY="20dp"
+        android:layout_toLeftOf="@id/seDeconnecterCompteClient"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"/>
+
+</RelativeLayout>
