Suite du parcours client: - champs à renseigner pour valider la destination, le point de départ et la date et l'heure du trajet; - création de la réservation liée et du trajet; - refacto du nom de l'enum en StatutTrajet - création d'une nouvelle méthode de recherche de client par login (à tester);

--- a/app/src/main/res/layout/client_page_reservation.xml
+++ b/app/src/main/res/layout/client_page_reservation.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="100dp"/>
 
     <EditText
-        android:id="@+id/choisirDate"
+        android:id="@+id/choisirDateDepart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Date de départ"
@@ -35,7 +35,7 @@
         android:hint="Lieu de départ"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:layout_below="@+id/choisirDate"/>
+        android:layout_below="@+id/choisirDateDepart"/>
 
     <EditText
         android:id="@+id/entrerDestination"
