--- a/app/src/main/res/layout/chauffeur_page_gestion_reservation.xml
+++ b/app/src/main/res/layout/chauffeur_page_gestion_reservation.xml
@@ -1,311 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView48"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nom/Prénom"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="549dp" />
-
-    <TextView
-        android:id="@+id/textView46"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Départ"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="575dp" />
-
-    <TextView
-        android:id="@+id/textView47"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Heure"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="601dp" />
-
-    <Switch
-        android:id="@+id/switch5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Accepté"
-        tools:layout_editor_absoluteX="239dp"
-        tools:layout_editor_absoluteY="574dp" />
-
-    <TextView
-        android:id="@+id/textView50"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Arrivée"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="575dp" />
-
-    <TextView
-        android:id="@+id/textView49"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="601dp" />
-
-    <TextView
-        android:id="@+id/textView43"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nom/Prénom"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="451dp" />
-
-    <TextView
-        android:id="@+id/textView41"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Départ"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="477dp" />
-
-    <TextView
-        android:id="@+id/textView42"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Heure"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="503dp" />
-
-    <Switch
-        android:id="@+id/switch4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Accepté"
-        tools:layout_editor_absoluteX="239dp"
-        tools:layout_editor_absoluteY="476dp" />
-
-    <TextView
-        android:id="@+id/textView45"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Arrivée"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="477dp" />
-
-    <TextView
-        android:id="@+id/textView44"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="503dp" />
-
-    <TextView
-        android:id="@+id/textView38"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nom/Prénom"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="250dp" />
-
-    <Switch
-        android:id="@+id/switch3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Accepté"
-        tools:layout_editor_absoluteX="239dp"
-        tools:layout_editor_absoluteY="275dp" />
-
-    <TextView
-        android:id="@+id/textView36"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="302dp" />
-
-    <TextView
-        android:id="@+id/textView37"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Arrivée"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="276dp" />
-
-    <TextView
-        android:id="@+id/textView40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Départ"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="276dp" />
-
-    <TextView
-        android:id="@+id/textView39"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Heure"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="302dp" />
-
-    <TextView
-        android:id="@+id/textView33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nom/Prénom"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="356dp" />
-
-    <TextView
-        android:id="@+id/textView31"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="408dp" />
-
-    <TextView
-        android:id="@+id/textView32"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Arrivée"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="382dp" />
-
-    <TextView
-        android:id="@+id/textView34"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Heure"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="408dp" />
-
-    <TextView
-        android:id="@+id/textView35"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Départ"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="382dp" />
-
-    <Switch
-        android:id="@+id/switch2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Accepté"
-        tools:layout_editor_absoluteX="239dp"
-        tools:layout_editor_absoluteY="381dp" />
-
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="95dp"
-        android:layout_height="85dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="541dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="95dp"
-        android:layout_height="85dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="241dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="95dp"
-        android:layout_height="85dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="138dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="95dp"
-        android:layout_height="85dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="344dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="95dp"
-        android:layout_height="85dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="443dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nom/Prénom"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="138dp" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Départ"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="164dp" />
-
-    <TextView
-        android:id="@+id/textView29"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Arrivée"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="164dp" />
-
-    <TextView
-        android:id="@+id/textView28"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Heure"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="190dp" />
-
-    <TextView
-        android:id="@+id/textView30"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="190dp" />
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Accepté"
-        tools:layout_editor_absoluteX="228dp"
-        tools:layout_editor_absoluteY="163dp" />
-
-    <TextView
-        android:id="@+id/textView51"
+        android:id="@+id/titrePageDemandeDeResa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mes demandes de réservation"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="64dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Retour"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="654dp" />
-
-    <Button
-        android:id="@+id/button9"
+        android:id="@+id/btnValiderDemandeDeResa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Valider"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="654dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_alignParentRight="true"/>
+
+    <Button
+        android:id="@+id/btnRetourDemandeDeResa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retour"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_alignParentLeft="true"/>
+
+</RelativeLayout>
