feat(ViewHolder_demande_Reservation) - Création des affichages des listes de chauffeurs et de réservations concernant le parcours client et le parcours chauffeur; - Implémentation des services pour les requêtes; - Création d'une enum pour le statut de la resa; - Création de classes et de layout pour avancée sur les différents parcours; - Création de holderViews et d'Adapter pour ces derniers; - Création de la réservation pour les clients; - Création d'un getter de date et d'heure pour les pages d'accueil de compte;

--- a/app/src/main/res/layout/client_page_reservation.xml
+++ b/app/src/main/res/layout/client_page_reservation.xml
@@ -15,6 +15,16 @@
         android:layout_marginTop="100dp"/>
 
     <EditText
+            android:id="@+id/choisirSecteur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Département de départ"
+            android:ems="10"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:layout_below="@id/pageReservationTitre"/>
+
+    <EditText
         android:id="@+id/choisirDateDepart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,8 +32,8 @@
         android:inputType="datetime"
         android:ems="10"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:layout_below="@id/pageReservationTitre"/>
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/choisirSecteur"/>
 
     <EditText
         android:id="@+id/entrerLieuDepart"
