--- a/app/src/main/res/layout/chauffeur_page_information.xml
+++ b/app/src/main/res/layout/chauffeur_page_information.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,39 +12,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Déconnexion"
-        tools:layout_editor_absoluteX="314dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"/>
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mon compte"
-        tools:layout_editor_absoluteX="221dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_toStartOf="@id/textView12"
+        android:layout_margin="10dp"/>
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="20dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_margin="10dp"/>
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gérer les demandes de réservations"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="295dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Voir mes courses"
-        tools:layout_editor_absoluteX="118dp"
-        tools:layout_editor_absoluteY="376dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/button6"
+        android:layout_marginBottom="10dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
