--- a/app/src/main/res/layout/client_page_ma_liste_de_resa.xml
+++ b/app/src/main/res/layout/client_page_ma_liste_de_resa.xml
@@ -12,7 +12,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerviewMesReservations"
-            android:layout_width="wrap_content"
+            android:layout_width="350dp"
             android:layout_height="350dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/titreMesReservationsCompteClient"/>
