--- a/app/src/main/res/layout/viewholder_liste_de_resa_compte_client.xml
+++ b/app/src/main/res/layout/viewholder_liste_de_resa_compte_client.xml
@@ -2,37 +2,43 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="5dp">
 
     <TextView
             android:id="@+id/dateResaClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:text="date"/>
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/heureResaClient"
               android:layout_below="@id/dateResaClient"
-        android:textColor="@color/black"/>
+              android:textColor="@color/black"
+              android:text="heure"/>
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/lieuDeDepartResaClient"
               android:layout_below="@id/heureResaClient"
-        android:textColor="@color/black"/>
+              android:textColor="@color/black"
+              android:text="départ"/>
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/lieuDarriveeResaClient"
               android:layout_below="@id/lieuDeDepartResaClient"
-        android:textColor="@color/black"/>
+              android:textColor="@color/black"
+              android:text="arrivée"/>
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/nomPrenomChauffeurResaClient"
               android:layout_below="@id/lieuDarriveeResaClient"
-        android:textColor="@color/black"/>
+              android:textColor="@color/black"
+              android:text="chauffeur"/>
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
@@ -41,6 +47,7 @@
               android:layout_alignParentRight="true"
               android:layout_marginRight="20dp"
               android:layout_centerVertical="true"
-        android:textColor="@color/black"/>
+              android:textColor="@color/black"
+              android:text="statut"/>
 
 </RelativeLayout>
